--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -39,6 +39,7 @@
     "uuid": "^11.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@nestjs/cli": "^10.4.0",
     "@nestjs/schematics": "^10.1.0",
     "@types/bcrypt": "^5.0.0",
@@ -51,6 +52,7 @@
     "@typescript-eslint/parser": "^8.0.0",
     "bcryptjs": "^3.0.3",
     "eslint": "^9.0.0",
+    "globals": "^17.0.0",
     "pino-pretty": "^13.0.0",
     "rimraf": "^6.0.0",
     "typescript": "^5.7.0"
