--- a/package.json
+++ b/package.json
@@ -12,12 +12,21 @@
     "dev:server": "turbo dev --filter=server",
     "dev:web": "turbo dev --filter=web",
     "build:server": "turbo build --filter=server",
-    "build:web": "turbo build --filter=web"
+    "build:web": "turbo build --filter=web",
+    "prepare": "husky"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "rimraf": "^6.0.0",
     "turbo": "^2.3.0",
-    "typescript": "^5.7.0",
-    "rimraf": "^6.0.0"
+    "typescript": "^5.7.0"
+  },
+  "lint-staged": {
+    "apps/**/*.{ts,tsx}": "pnpm run lint",
+    "packages/**/*.{ts,tsx}": "pnpm run lint"
   },
   "engines": {
     "node": ">=20.0.0"
