--- a/apps/web-pms/package.json
+++ b/apps/web-pms/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev --port 3000",
     "build": "next build",
     "start": "next start",
+    "docs:typedoc": "typedoc --options typedoc.json",
     "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build -o ../../docs/pms/reference/storybook/web-pms",
     "clean": "rimraf .next"
   },
   "dependencies": {
@@ -42,6 +45,12 @@
     "zustand": "^5.0.0"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^8.4.7",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/nextjs": "^8.4.7",
     "@tanstack/react-query-devtools": "^5.91.2",
     "@types/node": "^22.0.0",
     "@types/numeral": "^2.0.0",
@@ -52,8 +61,10 @@
     "eslint-config-next": "^15.1.0",
     "postcss": "^8.4.0",
     "rimraf": "^6.0.0",
+    "storybook": "^8.4.7",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "typedoc": "^0.28.16",
     "typescript": "^5.7.0"
   }
 }
