--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -40,13 +40,13 @@
     "rxjs": "^7.8.0",
     "socket.io": "^4.8.0",
     "swagger-ui-express": "^5.0.0",
-    "uuid": "^11.0.0"
+    "uuid": "^11.0.0",
+    "bcryptjs": "^3.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@nestjs/cli": "^10.4.0",
     "@nestjs/schematics": "^10.1.0",
-    "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/express": "^4.17.21",
     "@types/node": "^22.0.0",
@@ -54,7 +54,6 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
-    "bcryptjs": "^3.0.3",
     "eslint": "^9.0.0",
     "globals": "^17.0.0",
     "pino-pretty": "^13.0.0",
