--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -27,9 +27,11 @@
     "@nestjs/websockets": "^10.4.0",
     "@ssoo/database": "workspace:*",
     "@ssoo/types": "workspace:*",
+    "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.0",
     "class-validator": "^0.14.0",
     "dayjs": "^1.11.0",
+    "eslint-plugin-import": "^2.32.0",
     "helmet": "^8.0.0",
     "joi": "^18.0.2",
     "nestjs-pino": "^4.1.0",
@@ -40,8 +42,7 @@
     "rxjs": "^7.8.0",
     "socket.io": "^4.8.0",
     "swagger-ui-express": "^5.0.0",
-    "uuid": "^11.0.0",
-    "bcryptjs": "^3.0.3"
+    "uuid": "^11.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
@@ -54,6 +55,7 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "eslint-plugin-import": "^2.32.0",
     "eslint": "^9.0.0",
     "globals": "^17.0.0",
     "pino-pretty": "^13.0.0",
