--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -17,7 +17,10 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "docs:db:dbml": "prisma generate --schema prisma/schema.prisma",
+    "docs:db:build": "dbdocs build --project ssoo --input prisma/dbml --output ../../docs/common/reference/db",
+    "docs:db": "pnpm run docs:db:dbml && pnpm run docs:db:build"
   },
   "dependencies": {
     "@prisma/client": "^6.2.0"
@@ -28,6 +31,8 @@
     "dotenv": "^17.2.3",
     "pg": "^8.17.1",
     "prisma": "^6.2.0",
+    "prisma-dbml-generator": "^0.12.0",
+    "dbdocs": "^0.8.5",
     "rimraf": "^6.0.0",
     "typescript": "^5.7.0"
   }
