--- a/apps/web/pms/package.json
+++ b/apps/web/pms/package.json
@@ -9,7 +9,7 @@
     "docs:typedoc": "typedoc --options typedoc.json",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build -o ../../docs/pms/reference/storybook/web-pms",
+    "build-storybook": "storybook build -o ../../../docs/pms/reference/storybook",
     "clean": "rimraf .next"
   },
   "dependencies": {
@@ -45,12 +45,12 @@
     "zustand": "^5.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "^8.4.7",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-links": "^8.4.7",
-    "@storybook/blocks": "^8.4.7",
-    "@storybook/nextjs": "^8.4.7",
+    "@storybook/addon-a11y": "^8.6.15",
+    "@storybook/addon-essentials": "^8.6.15",
+    "@storybook/addon-interactions": "^8.6.15",
+    "@storybook/addon-links": "^8.6.15",
+    "@storybook/blocks": "^8.6.15",
+    "@storybook/nextjs": "^8.6.15",
     "@tanstack/react-query-devtools": "^5.91.2",
     "@types/node": "^22.0.0",
     "@types/numeral": "^2.0.0",
@@ -61,7 +61,7 @@
     "eslint-config-next": "^15.1.0",
     "postcss": "^8.4.0",
     "rimraf": "^6.0.0",
-    "storybook": "^8.4.7",
+    "storybook": "^8.6.15",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "typedoc": "^0.28.16",
