chore(docs): improve docs automation infrastructure
- Fix docs-verify.js paths (9 items verified)
- Add root docs:* integration scripts to package.json
- Add TypeDoc support to packages/types
- Remove shebang from docs-verify.js for Windows compatibility

--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "build": "turbo build",
     "lint": "turbo lint",
     "clean": "turbo clean && rimraf node_modules",
+    "docs:typedoc": "pnpm --filter server docs:typedoc && pnpm --filter web-pms docs:typedoc && pnpm --filter @ssoo/types docs:typedoc",
+    "docs:openapi": "pnpm --filter server docs:openapi",
+    "docs:db": "pnpm --filter @ssoo/database docs:db",
+    "docs:storybook": "pnpm --filter web-pms build-storybook",
+    "docs:all": "pnpm docs:typedoc && pnpm docs:openapi && pnpm docs:db && pnpm docs:storybook && pnpm docs:verify",
     "docs:verify": "node scripts/docs-verify.js",
     "dev:server": "turbo dev --filter=server",
     "dev:web-pms": "turbo dev --filter=web-pms",
