feat(docs): add Redoc HTML generation for OpenAPI specs
- Install @redocly/cli for static HTML generation
- Update generate-openapi.ts to produce index.html alongside JSON
- Update docs-verify.js to verify HTML outputs (14 items total)
- Follow consistent pattern: all docs tools generate static outputs

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "docs:openapi": "pnpm --filter server docs:openapi",
     "docs:db": "pnpm --filter @ssoo/database docs:db",
     "docs:storybook": "pnpm --filter web-pms build-storybook",
-    "docs:all": "pnpm docs:typedoc && pnpm docs:openapi && pnpm docs:db && pnpm docs:storybook && pnpm docs:verify",
+    "docs:architecture": "node scripts/render-architecture.js",
+    "docs:all": "pnpm docs:typedoc && pnpm docs:openapi && pnpm docs:db && pnpm docs:storybook && pnpm docs:architecture && pnpm docs:verify",
     "docs:verify": "node scripts/docs-verify.js",
     "dev:server": "turbo dev --filter=server",
     "dev:web-pms": "turbo dev --filter=web-pms",
