--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -49,6 +49,7 @@
         "@eslint/js": "^9.39.2",
         "@nestjs/cli": "^10.4.0",
         "@nestjs/schematics": "^10.1.0",
+        "@redocly/cli": "^2.14.9",
         "@types/bcryptjs": "^3.0.0",
         "@types/express": "^4.17.21",
         "@types/node": "^22.0.0",
