--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "docs:openapi": "pnpm --filter server docs:openapi",
     "docs:db": "pnpm --filter @ssoo/database docs:db",
     "docs:storybook": "pnpm --filter web-pms build-storybook",
-    "docs:architecture": "node scripts/render-architecture.js",
-    "docs:all": "pnpm docs:typedoc && pnpm docs:openapi && pnpm docs:db && pnpm docs:storybook && pnpm docs:architecture && pnpm docs:verify",
+    "docs:all": "pnpm docs:typedoc && pnpm docs:openapi && pnpm docs:db && pnpm docs:storybook && pnpm docs:verify",
     "docs:verify": "node scripts/docs-verify.js",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "changelog:init": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "dev:server": "turbo dev --filter=server",
     "dev:web-pms": "turbo dev --filter=web-pms",
     "build:server": "turbo build --filter=server",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
+    "conventional-changelog-cli": "^5.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "rimraf": "^6.0.0",
