fix(docs): move CHANGELOG.md to docs/ for DMS rendering
- Move CHANGELOG.md from root to docs/ folder
- Update changelog scripts path in package.json
- Update link in docs/pms/common/changelog.md
- Regenerate changelog to include recent commits

DMS renders docs/ folder, so CHANGELOG.md must be there for consistency.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "docs:storybook": "pnpm --filter web-pms build-storybook",
     "docs:all": "pnpm docs:typedoc && pnpm docs:openapi && pnpm docs:db && pnpm docs:storybook && pnpm docs:verify",
     "docs:verify": "node scripts/docs-verify.js",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "changelog:init": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "changelog": "conventional-changelog -p angular -i docs/CHANGELOG.md -s",
+    "changelog:init": "conventional-changelog -p angular -i docs/CHANGELOG.md -s -r 0",
     "dev:server": "turbo dev --filter=server",
     "dev:web-pms": "turbo dev --filter=web-pms",
     "build:server": "turbo build --filter=server",
