--- a/apps/web/pms/tsconfig.json
+++ b/apps/web/pms/tsconfig.json
@@ -33,6 +33,8 @@
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "**/*.stories.ts",
+    "**/*.stories.tsx"
   ]
 }
