--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "changelog:init": "conventional-changelog -p angular -i docs/CHANGELOG.md -s -r 0",
     "dev:server": "turbo dev --filter=server",
     "dev:web-pms": "turbo dev --filter=web-pms",
+    "dev:web-dms": "cd apps/web/dms && npm run dev -- --webpack",
     "build:server": "turbo build --filter=server",
     "build:web-pms": "turbo build --filter=web-pms",
+    "build:web-dms": "cd apps/web/dms && npm run build",
     "prepare": "husky"
   },
   "devDependencies": {
