--- a/apps/web/dms/package.json
+++ b/apps/web/dms/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.14.1",
     "@fluentui/react": "^8.125.1",
     "@fluentui/react-components": "^9.72.7",
+    "@fluentui/react-icons": "^2.0.317",
     "@google/generative-ai": "^0.24.1",
     "@lancedb/lancedb": "^0.23.0",
     "@mui/lab": "^7.0.1-beta.18",
@@ -44,13 +45,13 @@
     "lucide-react": "^0.548.0",
     "marked": "^17.0.1",
     "multer": "^2.0.2",
-    "next": "16.0.0",
+    "next": "^15.1.0",
     "nodemailer": "^7.0.12",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^3.1.1",
     "tailwindcss": "^3.4.0",
     "tippy.js": "^6.3.7",
@@ -63,7 +64,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0",
+    "eslint-config-next": "^15.1.0",
     "postcss": "^8.5.6",
     "typescript": "^5"
   }
