docs(dms): DMS 공식 문서 구조화 및 검증 완료
- README.md: PMS 양식에 맞게 업데이트
- domain/service-overview.md: 서비스 개요 문서 신규 작성
- design/design-system.md: 디자인 시스템 문서 신규 작성
- guides/hooks.md: 9개 훅 상세 가이드 (실제 코드 기반)
- guides/components.md: 35개 컴포넌트 가이드
- guides/api.md: 19개 API 엔드포인트 가이드
- verification-report.md: 문서-코드 정합성 검증 리포트 (100% PASS)
- 내부 문서(apps/web/dms/docs/development/)에 deprecated 안내 추가

검증 결과:
- Hooks: 9개 (라인 수 100% 일치)
- Components: 35개 (100% 커버리지)
- API: 19개 (100% 커버리지)

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "changelog:init": "conventional-changelog -p angular -i docs/CHANGELOG.md -s -r 0",
     "dev:server": "turbo dev --filter=server",
     "dev:web-pms": "turbo dev --filter=web-pms",
-    "dev:web-dms": "cd apps/web/dms && npm run dev -- --webpack",
+    "dev:web-dms": "cd apps/web/dms && npm run dev",
     "build:server": "turbo build --filter=server",
     "build:web-pms": "turbo build --filter=web-pms",
     "build:web-dms": "cd apps/web/dms && npm run build",
