refactor(dms): Phase 0 Step 1 - create src/ frontend structure
- Move frontend folders to src/ (components, hooks, lib, types, contexts)
- Merge utils/ into src/lib/utils/
- Update tsconfig.json paths (@/* -> ./src/*, @/services for backward compat)
- Fix import paths (@/utils/ -> @/lib/utils/)
- Build verified successfully

--- a/apps/web/dms/tsconfig.json
+++ b/apps/web/dms/tsconfig.json
@@ -24,7 +24,16 @@
     ],
     "paths": {
       "@/*": [
-        "./*"
+        "./src/*"
+      ],
+      "@/server/*": [
+        "./server/*"
+      ],
+      "@/services": [
+        "./services/index.ts"
+      ],
+      "@/services/*": [
+        "./services/*"
       ]
     }
   },
