--- a/apps/web/dms/package.json
+++ b/apps/web/dms/package.json
@@ -14,6 +14,7 @@
     "@fluentui/react-components": "^9.72.7",
     "@fluentui/react-icons": "^2.0.317",
     "@google/generative-ai": "^0.24.1",
+    "@hookform/resolvers": "^3.10.0",
     "@lancedb/lancedb": "^0.23.0",
     "@mui/lab": "^7.0.1-beta.18",
     "@mui/material": "^7.3.4",
@@ -49,13 +50,17 @@
     "nodemailer": "^7.0.12",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.71.1",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^3.1.1",
     "tailwindcss": "^3.4.0",
     "tippy.js": "^6.3.7",
-    "turndown": "^7.2.2"
+    "turndown": "^7.2.2",
+    "zod": "^3.25.76",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
