--- a/apps/web/dms/package.json
+++ b/apps/web/dms/package.json
@@ -59,6 +59,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "tippy.js": "^6.3.7",
     "turndown": "^7.2.2",
     "zod": "^3.25.76",
