--- a/apps/web/dms/package.json
+++ b/apps/web/dms/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "markdown-wiki",
+  "name": "web-dms",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3001",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
