--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -2,6 +2,7 @@
     "name": "server",
     "version": "0.0.1",
     "private": true,
+    "type": "module",
     "scripts": {
         "build": "nest build",
         "clean": "rimraf dist",
