--- a/.github/templates/workflows/pr-validation.yml
+++ b/.github/templates/workflows/pr-validation.yml
@@ -87,7 +87,7 @@ jobs:
       #   run: |
       #     CHANGED_FILES=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | grep -E '\.(ts|tsx)$' || true)
       #     if [ -n "$CHANGED_FILES" ]; then
-      #       node scripts/check-patterns.js $CHANGED_FILES
+      #       node .github/scripts/check-patterns.js $CHANGED_FILES
       #     fi
 
   # 추가 작업 (선택)
